--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="info-content">
           <h1 class="name" title="Sameer Rathod">Sameer Rathod</h1>
 
-          <p class="title"><b>Software Engineer:</b> New Product developer</p>
+          <p class="title"><b>Senior Technical Lead:</b> Solution Architecture</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
@@ -215,24 +215,21 @@
 
         <section class="about-text">
           <p>
-            With three years of professional experience in the software development industry, I have honed my skills in various 
-            front-end and back-end technologies, including HTML, CSS, Angular, .NET, Spring Boot, and MySQL. My journey has been marked 
-            by a consistent drive to stay at the forefront of technological advancements and apply best practices to create robust, 
-            scalable, and efficient software solutions.
+            With <b>four years</b> of professional experience in the software development industry, I have developed a 
+            deep expertise in both front-end and back-end technologies, including React, Angular, .NET, Spring 
+            Boot, and MySQL. Over the years, I have honed my skills in designing and delivering robust, scalable, and 
+            high-performance software solutions. My journey has been shaped by a continuous commitment to learning 
+            and staying ahead of the curve with emerging technologies, which has enabled me to lead and mentor 
+            teams to success.
           </p>
 
           <p>
-            Currently, I am working at Great Learning, a leading product-based Edu-tech company renowned for its commitment to 
-            innovation in education. In my role as a Software Engineer, I focus on creating comprehensive tech courses 
-            aimed at aspiring full stack developers. This role not only requires a deep understanding of software development 
-            principles but also the ability to communicate complex concepts in an accessible and engaging manner.
-          </p>
-
-          <p>
-            My technical expertise, combined with my passion for education and knack for simplifying complex topics, enables 
-            me to create impactful learning experiences. I am adept at using a variety of tools and frameworks to build dynamic, 
-            user-friendly applications and instructional content. Through my contributions, I aim to empower the next generation 
-            of software developers with the knowledge and skills they need to excel in their careers.
+            Currently, I am working as a <b>Senior Technical Lead</b> at <b>Sagility Health</b>, a leading 
+            leading healthcare technology company focused on transforming healthcare solutions 
+            through innovative software development. In this role <b>my work involves collaborating 
+            across teams to design scalable and high-performance systems, troubleshooting issues, 
+            and providing strategic technical guidance</b>. As a senior technical leader, I am also 
+            involved in key decision-making processes, defining product roadmaps, and ensuring that best practices are adhered to throughout the development lifecycle.
           </p>
         </section>
 
@@ -260,6 +257,7 @@
                   	<b>Tools I use</b><br>
           				• Figma <br>
           				• Adobe XD <br>
+          				• Power BI <br>
                 </p>
               </div>
 
@@ -446,15 +444,8 @@
 
               <h4 class="h4 timeline-item-title">k. k. Wagh Institute of Engineering Education & Research</h4>
               <h5 style="color: white;">Computer Engineering</h5>
+              <h5 style="color: white">CGPA: 7.49</h5>
               <span>2017 — 2021</span>
-
-            </li>
-
-            <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">Bytco College</h4>
-              <h5 style="color: white;">HSC - Higher Secondary Certificate</h5>
-              <span>2016 — 2017</span>
 
             </li>
 
@@ -470,15 +461,50 @@
             </div>
 
             <h3 class="h3">Experience</h3>
+
           </div>
 
           <ol class="timeline-list">
 
             <li class="timeline-item">
 
+              <h4 class="h4 timeline-item-title">Sagility Health - Senior Technical Lead</h4>
+
+              <span>Nov'2024 - Present</span>
+
+              <p class="timeline-text">
+                <ul style="color: white;">
+                  <li>
+                    • Working as a liaison between technology teams and business stakeholders, ensuring clear communication and alignment of objectives.
+                  </li>
+                  <br>
+                  <li>
+                    • Developing a deep understanding of application architecture (front-end and back-end) to troubleshoot issues and manage user-related tasks effectively. 
+                  </li>
+                  <br>
+                  <li>
+                    • Developing Payroll Applications to reduce financial leakage in the organization. 
+                  </li>
+                  <br>
+                   <li>
+                    • Managed project bottlenecks, coordinated with cross-functional stakeholders, and ensured timely resolution of project issues.
+                  </li>
+                  <br>
+                  <!-- <li>
+                    • My expertise, passion, and dedication will shape the learning experiences of employees and customers 
+                    alike, empowering them to excel in their roles and contribute to the company's success.
+                  </li>
+                  <br> -->
+                </ul>
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
               <h4 class="h4 timeline-item-title">Great Learning - Software Engineer</h4>
 
-              <span>Dec'2022 — Present</span>
+              <span>Dec'2022 — Nov'2024</span>
 
               <p class="timeline-text">
                 <ul style="color: white;">
